--- a/Source/Falcon/src/Falcon.Web.Api/packages.config
+++ b/Source/Falcon/src/Falcon.Web.Api/packages.config
@@ -25,5 +25,7 @@
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net46" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="RestSharp" version="106.2.1" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net46" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net46" />
 </packages>
