--- a/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
+++ b/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
@@ -55,6 +55,8 @@
     <Compile Include="Api\Level\SLevelUpInfo.cs" />
     <Compile Include="Api\Notification\Client\SClientNotificationData.cs" />
     <Compile Include="Api\Notification\Client\SFriendRequest.cs" />
+    <Compile Include="Api\Notification\Client\SFriendResponse.cs" />
+    <Compile Include="Api\Notification\RequestCommonInfo.cs" />
     <Compile Include="Api\Notification\SNotificationConfig.cs" />
     <Compile Include="Api\Quest\SQuest.cs" />
     <Compile Include="Api\Report\SReportedQuestion.cs" />
