Working On Sent And Inbox

--- a/Source/Falcon/src/Falcon.Data/Falcon.Data.csproj
+++ b/Source/Falcon/src/Falcon.Data/Falcon.Data.csproj
@@ -67,6 +67,7 @@
     <Compile Include="QueryProcessors\IQuestionsQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IQuestsQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IScoringQueryProcessor.cs" />
+    <Compile Include="QueryProcessors\ISentQueryProcessor.cs" />
     <Compile Include="QueryProcessors\ISpinWheelQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IStoresQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IThemesQueryProcessor.cs" />
