--- a/Source/Falcon/src/Falcon.Database/Falcon.Database.csproj
+++ b/Source/Falcon/src/Falcon.Database/Falcon.Database.csproj
@@ -77,6 +77,7 @@
     <Compile Include="SqlServer\QueryProcessors\QuestionsQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\QuestsQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\ScoringQueryProcessor.cs" />
+    <Compile Include="SqlServer\QueryProcessors\SentQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\SpinWheelQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\StoresQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\ThemesQueryProcessor.cs" />
