--- a/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
+++ b/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
@@ -245,6 +245,7 @@
     <Compile Include="InquiryProcessing\Private\QuestionReportInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\QuestionsInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\QuestsInquiryProcessor.cs" />
+    <Compile Include="InquiryProcessing\Private\SentInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\SpinWheelInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\StoresInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\ThemesInquiryProcessor.cs" />
@@ -272,6 +273,7 @@
     <Compile Include="InquiryProcessing\Public\IQuestionReportInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\IQuestionsInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\IQuestsInquiryProcessor.cs" />
+    <Compile Include="InquiryProcessing\Public\ISentInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\ISpinWheelInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\IStoresInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\IThemesInquiryProcessor.cs" />
@@ -303,6 +305,7 @@
     <Compile Include="MaintenanceProcessing\Private\QuestionReportMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\QuestionsMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\QuestsMaintenanceProcessor.cs" />
+    <Compile Include="MaintenanceProcessing\Private\SentMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\SpinWheelMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\StoresMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\ThemesMaintenanceProcessor.cs" />
@@ -327,6 +330,7 @@
     <Compile Include="MaintenanceProcessing\Public\IQuestionReportMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\IQuestionsMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\IQuestsMaintenanceProcessor.cs" />
+    <Compile Include="MaintenanceProcessing\Public\ISentMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\ISpinWheelMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\IStoresMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\IThemesMaintenanceProcessor.cs" />
