--- a/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
+++ b/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
@@ -219,6 +219,7 @@
     <Compile Include="Controllers\V1\AppAdvertisementsController.cs" />
     <Compile Include="Controllers\V1\SpinWheelController.cs" />
     <Compile Include="Controllers\V1\WatchAdController.cs" />
+    <Compile Include="Controllers\V2\AnswerController.cs" />
     <Compile Include="Controllers\V2\AppStatesController.cs" />
     <Compile Include="Controllers\V2\FriendsController.cs" />
     <Compile Include="Controllers\V2\InitializationController.cs" />
