--- a/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
+++ b/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Api\Achievement\SAchievementStatistic.cs" />
+    <Compile Include="Api\Answer\SFriendAnswerInquiry.cs" />
     <Compile Include="Api\Answer\SLikeDislikeAnswer.cs" />
     <Compile Include="Api\Answer\SYesNoAnswer.cs" />
     <Compile Include="Api\Cache\SLevelCache.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Api\Config\SGameConfig.cs" />
     <Compile Include="Api\Config\SClientVersionInfo.cs" />
     <Compile Include="Api\Friend\SFriend.cs" />
+    <Compile Include="Api\Friend\SFriendAnswer.cs" />
     <Compile Include="Api\Friend\SQuestionWithAnswerState.cs" />
     <Compile Include="Api\Input\Questions\EditInfo.cs" />
     <Compile Include="Api\Input\Questions\RemoveInfo.cs" />
