Saving Quest Data In Memory

--- a/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
+++ b/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
@@ -245,6 +245,7 @@
     <Compile Include="InquiryProcessing\Private\InitializationInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\LevelInMemoryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\LevelInquiryProcessor.cs" />
+    <Compile Include="InquiryProcessing\Private\QuestInMemoryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\QuestionReportInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\QuestionsInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\QuestsInquiryProcessor.cs" />
@@ -273,6 +274,7 @@
     <Compile Include="InquiryProcessing\Public\IPagedDataRequestFactory.cs" />
     <Compile Include="InquiryProcessing\Private\PagedDataRequestFactory.cs" />
     <Compile Include="InquiryProcessing\Public\INotificationInquiryProcessor.cs" />
+    <Compile Include="InquiryProcessing\Public\IQuestInMemoryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\IQuestionReportInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\IQuestionsInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\IQuestsInquiryProcessor.cs" />
