--- a/Source/Falcon/src/Falcon.Database/Falcon.Database.csproj
+++ b/Source/Falcon/src/Falcon.Database/Falcon.Database.csproj
@@ -87,6 +87,7 @@
     <Compile Include="SqlServer\QueryProcessors\ThemesQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\UserInfoQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\UserQueryProcessor.cs" />
+    <Compile Include="SqlServer\QueryProcessors\UserQuestAnswerQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\UserStatQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\WatchAdQueryProcessor.cs" />
   </ItemGroup>
