Working On Quest System

--- a/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
+++ b/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
@@ -286,6 +286,7 @@
     <Compile Include="InquiryProcessing\Public\IUsersInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\IUserStatsInquiryProcessor.cs" />
     <Compile Include="JobSystem\Private\JobManager.cs" />
+    <Compile Include="JobSystem\Private\Jobs\CalculateQuestPeopleNormal.cs" />
     <Compile Include="JobSystem\Private\Jobs\CharacterRankUpdate.cs" />
     <Compile Include="JobSystem\Private\Jobs\GlobalRankUpdate.cs" />
     <Compile Include="JobSystem\Private\Jobs\QuestionQualification.cs" />
