Adding Quest Detail and Friend Quest Detail

--- a/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
+++ b/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
@@ -66,7 +66,10 @@
     <Compile Include="Api\Notification\RequestCommonInfo.cs" />
     <Compile Include="Api\Notification\SNotificationConfig.cs" />
     <Compile Include="Api\Question\SForwardQuestion.cs" />
+    <Compile Include="Api\Quest\SFriendQuestDetail.cs" />
     <Compile Include="Api\Quest\SQuest.cs" />
+    <Compile Include="Api\Quest\SQuestDetail.cs" />
+    <Compile Include="Api\Quest\SQuestInquiry.cs" />
     <Compile Include="Api\Quest\SUserQuestAnswer.cs" />
     <Compile Include="Api\Report\SReportedQuestion.cs" />
     <Compile Include="Api\SCharacteristic.cs" />
