Finish Polling Data From Server

--- a/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
+++ b/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Api\Notification\Client\SFriendRequest.cs" />
     <Compile Include="Api\Notification\Client\SFriendResponse.cs" />
     <Compile Include="Api\Notification\Client\SInboxQuestion.cs" />
+    <Compile Include="Api\Notification\Client\SFriendStatus.cs" />
     <Compile Include="Api\Notification\Client\SSentQuestion.cs" />
     <Compile Include="Api\Notification\RequestCommonInfo.cs" />
     <Compile Include="Api\Notification\SNotificationConfig.cs" />
