--- a/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
+++ b/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
@@ -256,6 +256,7 @@
     <Compile Include="InquiryProcessing\Private\QuestionsInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\QuestsInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\SentInquiryProcessor.cs" />
+    <Compile Include="InquiryProcessing\Private\ServerInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\SpinWheelInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\StoresInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\ThemesInquiryProcessor.cs" />
@@ -287,6 +288,7 @@
     <Compile Include="InquiryProcessing\Public\IQuestionsInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\IQuestsInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\ISentInquiryProcessor.cs" />
+    <Compile Include="InquiryProcessing\Public\IServerInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\ISpinWheelInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\IStoresInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\IThemesInquiryProcessor.cs" />
