Adding Quest People Score and Quest Snapshot

--- a/Source/Falcon/src/Falcon.EFCommonContext/Falcon.EFCommonContext.csproj
+++ b/Source/Falcon/src/Falcon.EFCommonContext/Falcon.EFCommonContext.csproj
@@ -113,10 +113,16 @@
     <Compile Include="DbModel\QuestionAction.cs">
       <DependentUpon>WhatIfDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="DbModel\QuestPeopleScore.cs">
+      <DependentUpon>WhatIfDataModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DbModel\QuestQuestion.cs">
       <DependentUpon>WhatIfDataModel.tt</DependentUpon>
     </Compile>
     <Compile Include="DbModel\QuestScore.cs">
+      <DependentUpon>WhatIfDataModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DbModel\QuestScoreSnapshot.cs">
       <DependentUpon>WhatIfDataModel.tt</DependentUpon>
     </Compile>
     <Compile Include="DbModel\QuestType.cs">
