--- a/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
+++ b/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Api\Quest\SQuest.cs" />
     <Compile Include="Api\Quest\SQuestDetail.cs" />
     <Compile Include="Api\Quest\SQuestInquiry.cs" />
+    <Compile Include="Api\Quest\SQuestScoreSnapshot.cs" />
     <Compile Include="Api\Quest\SUserQuestAnswer.cs" />
     <Compile Include="Api\Report\SReportedQuestion.cs" />
     <Compile Include="Api\SCharacteristic.cs" />
