--- a/Source/Falcon/src/Falcon.Web.Api/Web.config
+++ b/Source/Falcon/src/Falcon.Web.Api/Web.config
@@ -60,8 +60,8 @@
   <connectionStrings>
     <!--Online Connection-->
     
-    <add name="DbEntity" connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=148.251.102.212,4542;Initial Catalog=SocialChimishod;Persist Security Info=True;User ID=Jeb;Password=@@@Visualbasic7;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="HangFire" connectionString="Data Source=148.251.102.212,4542;Initial Catalog=SocialHangfire;User ID=Jeb;Password=@@@Visualbasic7" />
+    <add name="DbEntity" connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=148.251.102.212,4542;Initial Catalog=SocialChimishod;Persist Security Info=True;User ID=Jeb;Password=@@@Visualbasic7;Min Pool Size=0;Max Pool Size=1000;Pooling=true; MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HangFire" connectionString="Data Source=148.251.102.212,4542;Initial Catalog=SocialHangfire;User ID=Jeb;Password=@@@Visualbasic7;Min Pool Size=0;Max Pool Size=1000;Pooling=true" />
     
     <!--Local Conncetion-->
     
