--- a/Source/Falcon/src/Falcon.Web.Api/packages.config
+++ b/Source/Falcon/src/Falcon.Web.Api/packages.config
@@ -3,6 +3,7 @@
   <package id="AutoMapper" version="6.1.1" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="Hangfire.Core" version="1.6.15" targetFramework="net46" />
+  <package id="Hangfire.Dashboard.Authorization" version="2.1.0" targetFramework="net46" />
   <package id="Hangfire.Ninject" version="1.2.0" targetFramework="net46" />
   <package id="Hangfire.SqlServer" version="1.6.15" targetFramework="net46" />
   <package id="log4net" version="2.0.8" targetFramework="net46" />
