--- a/Source/Falcon/src/Falcon.EFCommonContext/App.config
+++ b/Source/Falcon/src/Falcon.EFCommonContext/App.config
@@ -5,13 +5,20 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+
+
+    <!--online novintech release vps -->
+    <add name="DbEntity" connectionString="metadata=res:k//*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=192.168.182.22,4542;Initial Catalog=SocialChimishod;Persist Security Info=True;User ID=Jeb;Password=@@@Visualbasic7;Min Pool Size=0;Max Pool Size=100;Pooling=true;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     
-    <!--online-->
+    <!--online novintech vps -->
+    <!--<add name="DbEntity" connectionString="metadata=res:k//*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=87.107.135.252,4542;Initial Catalog=SocialChimishod;Persist Security Info=True;User ID=Jeb;Password=@@@Visualbasic7;Min Pool Size=0;Max Pool Size=100;Pooling=true;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    
+    <!--online vps -->
     <!--<add name="DbEntity" connectionString="metadata=res:k//*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.;Initial Catalog=SocialChimishod;Persist Security Info=True;User ID=Jeb;Password=@@@Visualbasic7;Min Pool Size=0;Max Pool Size=100;Pooling=true;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     
     <!--Localhost-->
-    <add name="DbEntity" connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SocialChimishod;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="UserDataContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=UserDataContext-20170110183041; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|UserDataContext-20170110183041.mdf" providerName="System.Data.SqlClient" />
+    <!--<add name="DbEntity" connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SocialChimishod;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="UserDataContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=UserDataContext-20170110183041; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|UserDataContext-20170110183041.mdf" providerName="System.Data.SqlClient" />-->
 
 
     <!--host uploading-->
