finish onesignal request

--- a/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
+++ b/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Api\Notification\Client\SSentQuestion.cs" />
     <Compile Include="Api\Notification\RequestCommonInfo.cs" />
     <Compile Include="Api\Notification\SNotificationConfig.cs" />
+    <Compile Include="Api\Notification\SNotificationID.cs" />
     <Compile Include="Api\Polling\SClientPollingData.cs" />
     <Compile Include="Api\Polling\SPollingInquiry.cs" />
     <Compile Include="Api\Question\SForwardQuestion.cs" />
