--- a/Source/Falcon/src/Falcon.EFCommonContext/App.NovinLiveTest.config
+++ b/Source/Falcon/src/Falcon.EFCommonContext/App.NovinLiveTest.config
@@ -2,4 +2,16 @@
 <!-- For more information on using app.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
 <!-- In case configuration is not the root element, replace it with root element in source configuration file -->
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
+
+
+  <connectionStrings>
+
+    <add name="DbEntity"
+      connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=87.107.135.252,4542;Initial Catalog=SocialChimishodLive;Persist Security Info=True;User ID=Jeb;Password=@@@Visualbasic7;Min Pool Size=0;Max Pool Size=1000;Pooling=true; MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+
+  </connectionStrings>
+
+  
+  
 </configuration>
